# autotune

./: .gitignore  Cargo.toml  build.rs  justfile
app/: Cargo.toml
app/src/: main.rs
app/src/audio/: clip_manager.rs  file.rs  mod.rs
app/src/audio/autotune/: mod.rs  psola.rs  pyin.rs
app/src/gui/: clips.rs  mod.rs  titlebar.rs  track.rs
docs/: index.md
docs/autotune/: audio.md  autotune.md  gui.md  index.md
docs/rust_prototype_1/: audio.md  gui.md  index.md  rust_prototype_1.md
rust_prototype_1/: Cargo.toml
rust_prototype_1/src/audio/: mod.rs
rust_prototype_1/src/audio/autotune/: mod.rs  psola.rs  pyin.rs
rust_prototype_1/src/gui/: clips.rs  mod.rs
rust_prototype_2/: Cargo.toml  build.rs
rust_prototype_2/docs/: index.md
rust_prototype_2/docs/rust_prototype_2/: gui.md  index.md
rust_prototype_2/docs/rust_prototype_2/audio/: audio_controller.md  file.md
rust_prototype_2/docs/rust_prototype_2/audio/autotune/: psola.md
rust_prototype_2/docs/rust_prototype_2/gui/components/: titlebar.md  track.md
rust_prototype_2/src/: lib.rs  main.rs
rust_prototype_2/src/audio/: audio_controller.rs  file.rs  mod.rs  scales.rs
rust_prototype_2/src/audio/autotune/: mod.rs  psola.rs  pyin.rs
rust_prototype_2/src/gui/: app.rs  mod.rs
rust_prototype_2/src/gui/components/: mod.rs  titlebar.rs  toolbar.rs  track.rs
rust_prototype_2/src/tests/: audio_controller_behaviour.rs  audio_controller_e2e.rs  audio_file_io.rs
rust_prototype_2/tests/: audio_controller_behaviour.rs  audio_controller_e2e.rs  audio_file_io.rs
src/: lib.rs
src/audio/: scales.rs  (+1 more)
(+45 files in other folders)
