[package]
name = "rust_prototype_1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
cpal = "0.16.0"
eframe = "0.32.0"
egui = "0.32.0"
hound = "3.5.1"
lame = "0.1.3"
ndarray = "0.16.1"
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"] }
rodio = "0.21.1"
tokio = { version = "1.47.1", features = ["full"] }
