[package]
name = "rust_prototype_2"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_prototype_2"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
cpal = "0.17.1"
eframe = "0.33.3"
egui = "0.33.3"
hound = "3.5.1"
rayon = "1.11.0"
rfd = "0.17.2"
rodio = "0.21.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-macros = "=0.2.0-alpha.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
